--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,12 +48,12 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\Rentadvisor\eclipse-workspace\test\testng.xml</span>
+                    <span>C:\Users\Rentadvisor\Documents\Respositorio Yale\test\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Suite" class="navigator-link ">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,32 +101,17 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test" class="method navigator-link" hash-for-method="Consultar(1)">Consultar(1)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test_Pedido" class="method navigator-link" hash-for-method="Consultar(1, Orden de venta (OV))">Consultar(1, Orden de venta (OV))</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test" class="method navigator-link" hash-for-method="Consultar(2)">Consultar(2)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test_Pedido" class="method navigator-link" hash-for-method="Consultar(2, Número de Guía)">Consultar(2, Número de Guía)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test" class="method navigator-link" hash-for-method="Consultar(1)">Consultar(1)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test" class="method navigator-link" hash-for-method="Consultar(2)">Consultar(2)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test" class="method navigator-link" hash-for-method="DocumentoVacio">DocumentoVacio</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test" class="method navigator-link" hash-for-method="DocumentoVacio">DocumentoVacio</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.Yale_Test_Automated.Consultar_Test_Pedido" class="method navigator-link" hash-for-method="Validar_Estados">Validar_Estados</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -144,53 +129,30 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.Yale_Test_Automated.Consultar_Test</span>
+              <span class="class-name">com.Yale_Test_Automated.Consultar_Test_Pedido</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Consultar(1)">
-                  </a> <!-- Consultar(1) -->
+                  <a name="Consultar(1, Orden de venta (OV))">
+                  </a> <!-- Consultar(1, Orden de venta (OV)) -->
                   <span class="method-name">Consultar</span>
-                  <span class="parameters">(1)</span>
+                  <span class="parameters">(1, Orden de venta (OV))</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Consultar(2)">
-                  </a> <!-- Consultar(2) -->
+                  <a name="Consultar(2, Número de Guía)">
+                  </a> <!-- Consultar(2, Número de Guía) -->
                   <span class="method-name">Consultar</span>
-                  <span class="parameters">(2)</span>
+                  <span class="parameters">(2, Número de Guía)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Consultar(1)">
-                  </a> <!-- Consultar(1) -->
-                  <span class="method-name">Consultar</span>
-                  <span class="parameters">(1)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Consultar(2)">
-                  </a> <!-- Consultar(2) -->
-                  <span class="method-name">Consultar</span>
-                  <span class="parameters">(2)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="DocumentoVacio">
-                  </a> <!-- DocumentoVacio -->
-                  <span class="method-name">DocumentoVacio</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="DocumentoVacio">
-                  </a> <!-- DocumentoVacio -->
-                  <span class="method-name">DocumentoVacio</span>
+                  <a name="Validar_Estados">
+                  </a> <!-- Validar_Estados -->
+                  <span class="method-name">Validar_Estados</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -198,26 +160,20 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Rentadvisor\eclipse-workspace\test\testng.xml</span>
+            <span class="header-content">C:\Users\Rentadvisor\Documents\Respositorio Yale\test\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite parallel=&quot;none&quot; name=&quot;Suite&quot;&gt;
-  &lt;parameter name=&quot;URL&quot; value=&quot;http://localhost:4200/&quot;/&gt;
-  &lt;test name=&quot;Test on Chrome&quot;&gt;
+  &lt;parameter name=&quot;URL&quot; value=&quot;http://localhost:4300/&quot;/&gt;
+  &lt;test name=&quot;Test on Chrome consultar pedido&quot;&gt;
     &lt;parameter name=&quot;BrowserType&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.Yale_Test_Automated.Consultar_Test&quot;/&gt;
+      &lt;class name=&quot;com.Yale_Test_Automated.Consultar_Test_Pedido&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test on Chrome --&gt;
-  &lt;test name=&quot;Test on FF&quot;&gt;
-    &lt;parameter name=&quot;BrowserType&quot; value=&quot;Firefox&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.Yale_Test_Automated.Consultar_Test&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test on FF --&gt;
+  &lt;/test&gt; &lt;!-- Test on Chrome consultar pedido --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -229,10 +185,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test on Chrome (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Test on FF (1 class)</span>
+                <span class="test-name">Test on Chrome consultar pedido (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -258,36 +211,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Consultar')
-data.setCell(0, 2, 'com.Yale_Test_Automated.Consultar_Test')
-data.setCell(0, 3, 6913);
+data.setCell(0, 2, 'com.Yale_Test_Automated.Consultar_Test_Pedido')
+data.setCell(0, 3, 6688);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Consultar')
-data.setCell(1, 2, 'com.Yale_Test_Automated.Consultar_Test')
-data.setCell(1, 3, 6908);
+data.setCell(1, 1, 'Validar_Estados')
+data.setCell(1, 2, 'com.Yale_Test_Automated.Consultar_Test_Pedido')
+data.setCell(1, 3, 6497);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'Consultar')
-data.setCell(2, 2, 'com.Yale_Test_Automated.Consultar_Test')
-data.setCell(2, 3, 6459);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Consultar')
-data.setCell(3, 2, 'com.Yale_Test_Automated.Consultar_Test')
-data.setCell(3, 3, 6369);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'DocumentoVacio')
-data.setCell(4, 2, 'com.Yale_Test_Automated.Consultar_Test')
-data.setCell(4, 3, 2613);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'DocumentoVacio')
-data.setCell(5, 2, 'com.Yale_Test_Automated.Consultar_Test')
-data.setCell(5, 3, 2238);
+data.setCell(2, 2, 'com.Yale_Test_Automated.Consultar_Test_Pedido')
+data.setCell(2, 3, 6407);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <span class="suite-total-time">Total running time: 19 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -313,47 +254,23 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.Yale_Test_Automated.Consultar_Test</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.Yale_Test_Automated.Consultar_Test_Pedido</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUp(http://localhost:4200/, Chrome)</span>
+                <span class="method-name">setUp(http://localhost:4300/, Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">Consultar(1)</span>
-                <span class="method-start">8907 ms</span>
+                <span class="method-name">Consultar(1, Orden de venta (OV))</span>
+                <span class="method-start">8671 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Consultar(2)</span>
-                <span class="method-start">15367 ms</span>
+                <span class="method-name">Consultar(2, Número de Guía)</span>
+                <span class="method-start">15359 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">DocumentoVacio</span>
-                <span class="method-start">21737 ms</span>
+                <span class="method-name">Validar_Estados</span>
+                <span class="method-start">21768 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">afterClass</span>
-                <span class="method-start">23976 ms</span>
-              </div> <!-- configuration-class after -->
-              <div class="configuration-class before">
-                <span class="method-name">setUp(http://localhost:4200/, Firefox)</span>
-                <span class="method-start">24008 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">Consultar(1)</span>
-                <span class="method-start">33691 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Consultar(2)</span>
-                <span class="method-start">40605 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">DocumentoVacio</span>
-                <span class="method-start">47514 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">afterClass</span>
-                <span class="method-start">50128 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
