--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="908da7">  <td>20/12/18 16:48:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Encuesta_Login.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Encuesta_Login@19b89d4]">Login</td> 
-  <td>main@2143582219</td>   <td></td> </tr>
-<tr bgcolor="908da7">  <td>20/12/18 16:48:31</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Encuesta_Login.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Encuesta_Login@19b89d4]">Login</td> 
-  <td>main@2143582219</td>   <td></td> </tr>
-<tr bgcolor="908da7">  <td>20/12/18 16:48:31</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Encuesta_Login.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Encuesta_Login@19b89d4]">Login</td> 
-  <td>main@2143582219</td>   <td></td> </tr>
-<tr bgcolor="908da7">  <td>20/12/18 16:48:31</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Encuesta_Login.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Encuesta_Login@19b89d4]">Login</td> 
-  <td>main@2143582219</td>   <td></td> </tr>
-<tr bgcolor="908da7">  <td>20/12/18 16:48:31</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Encuesta_Login.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Encuesta_Login@19b89d4]">Login</td> 
-  <td>main@2143582219</td>   <td></td> </tr>
-<tr bgcolor="908da7">  <td>20/12/18 16:48:31</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Encuesta_Login.Login(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Encuesta_Login@19b89d4]">Login</td> 
-  <td>main@2143582219</td>   <td></td> </tr>
+<tr bgcolor="98bf75">  <td>21/01/28 01:45:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@2f666ebb]">Validar_Busqueda_Anime</td> 
+  <td>main@79644918</td>   <td></td> </tr>
+<tr bgcolor="98bf75">  <td>21/01/28 01:45:25</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@2f666ebb]">Validar_Busqueda_Anime</td> 
+  <td>main@79644918</td>   <td></td> </tr>
+<tr bgcolor="98bf75">  <td>21/01/28 01:45:25</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@2f666ebb]">Validar_Busqueda_Anime</td> 
+  <td>main@79644918</td>   <td></td> </tr>
+<tr bgcolor="98bf75">  <td>21/01/28 01:45:25</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@2f666ebb]">Validar_Busqueda_Anime</td> 
+  <td>main@79644918</td>   <td></td> </tr>
 </table>
