--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b6374">  <td>20/12/21 14:19:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Consultar_Test_Pedido.setUp(java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Pedido@14f232c4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1801942731</td>   <td></td> </tr>
-<tr bgcolor="9b6374">  <td>20/12/21 14:20:00</td>   <td>8668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Pedido.Consultar(java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Pedido@14f232c4]">Consultar</td> 
-  <td>main@1801942731</td>   <td></td> </tr>
-<tr bgcolor="9b6374">  <td>20/12/21 14:20:07</td>   <td>15356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Pedido.Consultar(java.lang.String, java.lang.String)[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Pedido@14f232c4]">Consultar</td> 
-  <td>main@1801942731</td>   <td></td> </tr>
-<tr bgcolor="9b6374">  <td>20/12/21 14:20:14</td>   <td>21765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Consultar_Test_Pedido.Validar_Estados()[pri:0, instance:com.Yale_Test_Automated.Consultar_Test_Pedido@14f232c4]">Validar_Estados</td> 
-  <td>main@1801942731</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:03:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_Page.setUp(java.lang.String, java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4b2c5e02]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:04:09</td>   <td>11628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4b2c5e02]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:04:12</td>   <td>14156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4b2c5e02]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:04:14</td>   <td>16501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4b2c5e02]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:04:17</td>   <td>18878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Link_Rotos()[pri:0, instance:com.Jikan_Test.Test_Page@4b2c5e02]">Validar_Link_Rotos</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:05:11</td>   <td>72919</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_Page.setUp(java.lang.String, java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4d6025c5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:06:12</td>   <td>134500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4d6025c5]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:06:12</td>   <td>134501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4d6025c5]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:06:12</td>   <td>134503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4d6025c5]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:06:12</td>   <td>134504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Link_Rotos()[pri:0, instance:com.Jikan_Test.Test_Page@4d6025c5]">Validar_Link_Rotos</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:06:12</td>   <td>134517</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Test_Page.setUp(java.lang.String, java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4f4c4b1a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:07:14</td>   <td>196560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4f4c4b1a]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:07:14</td>   <td>196561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4f4c4b1a]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:07:14</td>   <td>196563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Busqueda_Anime(java.lang.String)[pri:0, instance:com.Jikan_Test.Test_Page@4f4c4b1a]">Validar_Busqueda_Anime</td> 
+  <td>main@682910755</td>   <td></td> </tr>
+<tr bgcolor="ee81fc">  <td>21/01/28 21:07:14</td>   <td>196565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_Page.Validar_Link_Rotos()[pri:0, instance:com.Jikan_Test.Test_Page@4f4c4b1a]">Validar_Link_Rotos</td> 
+  <td>main@682910755</td>   <td></td> </tr>
 </table>
